--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -1,4 +1,13 @@
 :root {
+  --text-black: #000000;
+  --text-white: #ffffff;
+
+  --bg-black: #000000;
+  --bg-white: #ffffff;
+  --bg-blackRgb: rgb(0, 0, 0, 0.7);
   --bg-grey: #dcdcdc;
   --bg-error: #ff9494;
+
+  --border-black: #000000;
+  --border-white: #ffffff;
 }
