--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -2,6 +2,7 @@
   --text-black: #000000;
   --text-white: #ffffff;
   --text-hover: #bebebe;
+  --text-gray: #5f5f5f;
 
   --bg-black: #000000;
   --bg-white: #ffffff;
