chatroomとfriendページの仕様を変更

--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -7,7 +7,7 @@
   --bg-black: #000000;
   --bg-white: #ffffff;
   --bg-blackRgb: rgb(0, 0, 0, 0.7);
-  --bg-grey: #dcdcdc;
+  --bg-grey: #eae9e9;
   --bg-error: #ff9494;
 
   --border-black: #000000;
