--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -3,6 +3,7 @@
   --text-white: #ffffff;
   --text-hover: #bebebe;
   --text-gray: #5f5f5f;
+  --text-error: #ff2525;
 
   --bg-black: #000000;
   --bg-white: #ffffff;
